# Interacting-With-Minecraft-TCP

./: .gitignore  README.md
cpp/minecraft/src/client/: client.h  client.hpp  clientBase.h  clientBase.hpp  logging.h  logging.hpp
cpp/minecraft/src/protocol/package/: PackageImpl.h  PackageImpl.hpp  definition.h  definition.hpp  oldPackage.h  oldPackage.hpp  package.h  package.hpp
cpp/minecraft/src/protocol/type/: angle.h  angle.hpp  boolean.h  boolean.hpp  compoundArray.h  compoundArray.hpp  double.h  double.hpp  float.h  float.hpp  identifier.h  identifier.hpp  integer.h  integer.hpp  mcOption.h  mcOption.hpp  mcarray.h  mcarray.hpp  mcuuid.h  mcuuid.hpp  nbt.h  position.h  position.hpp  prefixedArray.h  prefixedArray.hpp  prefixedOption.h  prefixedOption.hpp  str.h  str.hpp  varNum.h  varNum.hpp
cpp/minecraft/src/utils/: debugger.h  debugger.hpp  fstr.h  fstr.hpp  md5.h  md5.hpp  nullable.h  nullable.hpp  sha1.h  sha1.hpp  utils.h  utils.hpp  uuid.h  uuid.hpp
cpp/test/: CMakeLists.txt  test.cpp
cpp/zlib/lib/: zlib.exp  zlib.lib  zlibstatic.lib
